more work on generic add ' quoting fix IntegerInstantiation is more memory friendly
git-svn-id: http://svn.igniterealtime.org/svn/repos/smack/trunk@11024 b35dd754-fafc-0310-a699-88a17e54d16e